--- a/styles.css
+++ b/styles.css
@@ -52,16 +52,16 @@ h1, h2, h3 {
 
 
 .btn {
-    background-color: #0056b3;
-    color: #fff;
+    background-color: transparent;
+    color: transparent;
     padding: 10px 20px;
     border-radius: 5px;
     transition: background-color 0.3s ease;
 }
 
-.btn:hover {
+/* .btn:hover {
     background-color: #003f7f;
-}
+} */
 
 /* Navbar */
 .navbar {
@@ -81,7 +81,7 @@ h1, h2, h3 {
 }
 /* Navbar */
 .navbar {
-    background-color: #0056b3;
+    
     padding: 15px 0;
     display: flex;
     justify-content: space-between;
@@ -167,7 +167,7 @@ h1, h2, h3 {
 
 /* Hero Section */
 .hero-section {
-    background: linear-gradient(to right, lavender, #0056b3); /* Gradient from white to light blue *//* Gradient from dark blue to lighter blue */
+    background: #f0f0f0; /* Gradient from white to light blue *//* Gradient from dark blue to lighter blue */
     background-position: center;
     color: #fff;
     text-align: center;
@@ -191,6 +191,15 @@ h1, h2, h3 {
     margin-bottom: 30px;
     justify-content: center;
     align-items: center;
+    color: #333;
+}
+.btnn {
+    background-color: #0056b3;
+    color: #fff;
+    padding: 10px 30px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    text-decoration: none;
 }
 .hero-right{
     background-image: url('businesspersons-with-document.jpg');
